--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
+    "/js/projects.js": "/js/projects.js",
     "/css/projects.css": "/css/projects.css",
     "/css/app.css": "/css/app.css"
 }
